fixing scroll error on mobile menu

--- a/css/menu-styles.css
+++ b/css/menu-styles.css
@@ -117,7 +117,7 @@
     justify-content: flex-start;
     z-index: 8;
     margin: 0;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
   .menu-submenu {
     display: none;
@@ -135,7 +135,7 @@
     justify-content: flex-start;
     z-index: 7;
     margin: 0;
-    overflow-y: auto;
+    overflow-y: scroll;
   }
   .menu-submenu.slow-close {
     transition: opacity 0.4s ease-in-out 0.1s;
